crates/macros/tests/ui/fail/method_attr_missing_name.rs
#[fittings::service]
trait MissingMethodNameService {
    #[fittings::method]
    async fn hello(&self, params: ()) -> Result<(), fittings::FittingsError>;
}

fn main() {}
